Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-11668

[C++] Sporadic UBSAN error in FutureStessTest.TryAddCallback

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 4.0.0
    • C++

    Description

      This just appeared in a CI build:
      https://github.com/apache/arrow/pull/7507/checks?check_run_id=1919160171#step:8:1986

      
      2021-02-17T14:15:04.9549657Z [ RUN      ] FutureStessTest.TryAddCallback
      2021-02-17T14:15:04.9551798Z /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/atomic_base.h:396:9: runtime error: load of value 65, which is not a valid value for type 'std::__atomic_base<bool>::__int_type' (aka 'bool')
      2021-02-17T14:15:04.9553296Z ==4455==WARNING: invalid path to external symbolizer!
      2021-02-17T14:15:04.9554178Z ==4455==WARNING: Failed to use and restart external symbolizer!
      2021-02-17T14:15:04.9555990Z     #0 0x5cd181 in std::atomic<bool>::load(std::memory_order) const /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/bits/atomic_base.h:396
      2021-02-17T14:15:04.9556828Z     #1 0x5db187 in operator() /arrow/cpp/src/arrow/util/future_test.cc:554
      2021-02-17T14:15:04.9559466Z     #2 0x5d9b7f in bool std::condition_variable::wait_until<std::chrono::_V2::system_clock, std::chrono::duration<long, std::ratio<1l, 1000000000l> >, arrow::FutureStessTest_TryAddCallback_Test::TestBody()::$_8>(std::unique_lock<std::mutex>&, std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long, std::ratio<1l, 1000000000l> > > const&, arrow::FutureStessTest_TryAddCallback_Test::TestBody()::$_8) /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/condition_variable:128
      2021-02-17T14:15:04.9563077Z     #3 0x556aaf in bool std::condition_variable::wait_for<double, std::ratio<1l, 1l>, arrow::FutureStessTest_TryAddCallback_Test::TestBody()::$_8>(std::unique_lock<std::mutex>&, std::chrono::duration<double, std::ratio<1l, 1l> > const&, arrow::FutureStessTest_TryAddCallback_Test::TestBody()::$_8) /usr/bin/../lib/gcc/x86_64-linux-gnu/7.5.0/../../../../include/c++/7.5.0/condition_variable:156
      2021-02-17T14:15:04.9565008Z     #4 0x5557a2 in arrow::FutureStessTest_TryAddCallback_Test::TestBody() /arrow/cpp/src/arrow/util/future_test.cc:553
      2021-02-17T14:15:04.9568351Z     #5 0x7f2f5c9686cd in void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2433
      2021-02-17T14:15:04.9571646Z     #6 0x7f2f5c94f25a in void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2469
      2021-02-17T14:15:04.9574242Z     #7 0x7f2f5c92ec52 in testing::Test::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2508
      2021-02-17T14:15:04.9575651Z     #8 0x7f2f5c92f9c7 in testing::TestInfo::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2684
      2021-02-17T14:15:04.9577482Z     #9 0x7f2f5c9300e6 in testing::TestSuite::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2816
      2021-02-17T14:15:04.9579343Z     #10 0x7f2f5c93d1a9 in testing::internal::UnitTestImpl::RunAllTests() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:5338
      2021-02-17T14:15:04.9595840Z     #11 0x7f2f5c96c2dd in bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2433
      2021-02-17T14:15:04.9600672Z     #12 0x7f2f5c951baa in bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:2469
      2021-02-17T14:15:04.9603172Z     #13 0x7f2f5c93ccd5 in testing::UnitTest::Run() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest.cc:4925
      2021-02-17T14:15:04.9604686Z     #14 0x7f2f5cb9da10 in RUN_ALL_TESTS() /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/include/gtest/gtest.h:2473
      2021-02-17T14:15:04.9606094Z     #15 0x7f2f5cb9d9ef in main /build/cpp/googletest_ep-prefix/src/googletest_ep/googletest/src/gtest_main.cc:45
      2021-02-17T14:15:04.9607214Z     #16 0x7f2f5b114bf6 in __libc_start_main ??:?
      2021-02-17T14:15:04.9608691Z     #17 0x44f0c9 in _start ??:?
      

      Attachments

        Issue Links

          Activity

            People

              westonpace Weston Pace
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m