ARROW-11668: [C++] Sporadic UBSAN error in FutureStessTest.TryAddCallback

The UBSAN test was periodically failing because an uninitialized std::atomic<bool> could have any value.  I did a review of std::atomic<bool> and found at least one other place where I had made this incorrect assumption.  Both are fixed here.

Closes #9518 from westonpace/feature/arrow-11668

Authored-by: Weston Pace <weston.pace@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>